source jars and mod file
[ci skip] cause tscore

--- a/build.gradle
+++ b/build.gradle
@@ -82,7 +82,9 @@ task updateVersion(type: Copy) {
     into 'build/sources/java'
     filter(ReplaceTokens, tokens: [
         'VERSION': config.mod.version,
-        'BUILD_NUMBER': build_number
+        'BUILD_NUMBER': build_number,
+        'MODID': config.mod.id,
+        'SUPPORTED_VERSIONS': config.mod.mcversions
     ])
 }
 
@@ -113,54 +115,13 @@ processResources {
 
 // Short-hand variable
 ext.jarVer = "${project.minecraft.version}-${project.version}"
-// Output of reobf task
-ext.jarFile = reobf.outputs.files.each{}.collect{ zipTree(it) }
-// Files to not include in baseJar
-ext.baseExcludes = []
-
-task exampleTaskDoNotRunJar(type: Jar, dependsOn: reobf) {
-    from (project.ext.jarFile) {
-        include "stuff here"
-        rename ("ext_info.info", 'mcmod.info')
-
-        project.ext.baseExcludes.addAll(includes)
-    }
-    manifest {
-        attributes 'FMLCorePlugin': 'codechicken.core.launch.DepLoader'
-        attributes 'FMLCorePluginContainsFMLMod': 'true'
-    }
-    version = project.ext.jarVer
-    appendix = 'name'
-}
-
-task baseJar(type: Jar, dependsOn: reobf) {
-    from (project.ext.jarFile) {
-        exclude project.ext.baseExcludes
-    }
-    manifest {
-        attributes 'FMLCorePlugin': 'codechicken.core.launch.DepLoader'
-        attributes 'FMLCorePluginContainsFMLMod': 'true'
-    }
-    version = project.ext.jarVer
-    appendix = ''
-}
-
-// baseJar pulls all files not in any other jar. Therefore must run last
-baseJar.mustRunAfter { tasks.findAll { task -> (task.name.endsWith('Jar') && !task.name.equals('baseJar')) } }
-
-gradle.taskGraph.afterTask { task, TaskState state ->
-    if (task == baseJar) {
-        // Delete original jar now it has been split into separate jars.
-        reobf.outputs.files.each{delete it}
-    }
-}
 
 // Add in a source jar for people, should they desire to download such a thing
-//task sourceJar(type: Jar) {
-//    from sourceSets.main.allSource
-//    classifier = 'src'
-//    version = "${project.minecraft.version}-${project.version}"
-//}
+task sourceJar(type: Jar) {
+    from sourceSets.main.allSource
+    classifier = 'src'
+    version = project.jarVer
+}
 
 // Add in an mcp named jar, for those who wish to run in a development environment (assuming mcp naming matches)
 //task deobfJar(type: Jar) {
@@ -175,5 +136,5 @@ gradle.taskGraph.afterTask { task, TaskState state ->
 
 // Tell the artifact system about our extra jars
 artifacts {
-    archives baseJar
+    archives sourceJar
 }
