--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ repositories {
     mavenCentral()
     mavenLocal()
     maven {
+        name "snapshots"
+        url "https://oss.sonatype.org/content/repositories/snapshots/"
+    }
+    maven {
         name "chickenbones"
         url "http://chickenbones.net/maven/"
     }
