--- a/build.gradle
+++ b/build.gradle
@@ -121,6 +121,10 @@ task updateVersion(type: Copy) {
 
 compileJava.dependsOn updateVersion
 
+tasks.withType(JavaCompile) {
+    options.incremental = true
+}
+
 processResources {
     //redo task if any of these properties change
     inputs.property "version", project.version
